--- a/TyperBalloons/nbproject/project.properties
+++ b/TyperBalloons/nbproject/project.properties
@@ -78,7 +78,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=typerballoons.TyperBalloons
+javafx.main.class=Vistas.TyperBalloons
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
